[gd_scene load_steps=3 format=3 uid="uid://b6urjobtj67eo"]

[ext_resource type="Script" uid="uid://btgtpjibliq6b" path="res://src/weapon/ui/weapon_ui.gd" id="1_2xyhp"]
[ext_resource type="Texture2D" uid="uid://7sfkokbrlv7l" path="res://src/weapon/bg.png" id="2_thoqu"]

[node name="WeaponUi" type="TextureRect"]
offset_right = 64.0
offset_bottom = 64.0
size_flags_horizontal = 4
texture = ExtResource("2_thoqu")
script = ExtResource("1_2xyhp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 20.0
grow_horizontal = 2

[node name="WeaponName" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "武器名称"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
